@@ -1,0 +1,53 @@
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one or more
+   contributor license agreements.  See the NOTICE file distributed with
+   this work for additional information regarding copyright ownership.
+   The ASF licenses this file to You under the Apache License, Version 2.0
+   (the "License"); you may not use this file except in compliance with
+   the License.  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+-->
+<html>
+
+<head>
+<meta http-equiv="Content-Language" content="en-us">
+<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+<title>Local Task</title>
+</head>
+
+<body>
+
+<h2>Local</h2>
+<h3>Description</h3>
+<p>Adds a local property to the current scope. Property scopes exist at Ant's
+various "block" levels. These include targets as well as the
+<a href="parallel.html">Parallel</a> and <a href="sequential.html">Sequential</a>
+task containers (including <a href="macrodef.html">Macrodef</a> bodies). A local
+property at a given scope "shadows" properties of the same name at higher scopes,
+including the global scope (declaring a local property at the global level, i.e.
+outside of any scope block, has no effect). <b>Since Ant 1.8</b></p>
+
+<h3>Parameters</h3>
+<table border="1" cellpadding="2" cellspacing="0"> 
+  <tr>
+    <td valign="top"><b>Attribute</b></td>
+    <td valign="top"><b>Description</b></td>
+    <td align="center" valign="top"><b>Required</b></td>
+  </tr>
+  <tr>
+    <td valign="top">name</td>
+    <td valign="top">The property to declare in the current scope</td>
+    <td valign="top" align="center">Yes</td>
+  </tr>
+</table>
+
+</body>
+</html>
+
